apps/rocketchat/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
  name: rocketchat
  namespace: rocketchat
spec:
  rules:
    - host: chat.rocketops.io
      http:
        paths:
          - backend:
              serviceName: rocketchat-rocketchat
              servicePort: 80
            path: /
  tls:
  - secretName: tls-prod-cert
    hosts:
    - chat.rocketops.io
